Fix spacing above locations in footer [WEB-2419]

--- a/frontend/scss/globals/_g-footer.scss
+++ b/frontend/scss/globals/_g-footer.scss
@@ -393,6 +393,7 @@
 
         &:nth-child(2) {
           margin-left: colspan(2, 'medium');
+          margin-top: -8px;
         }
       }
     }
